// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TUI Visual Regression Baseline [T00] > renders 60x24 narrow terminal edge-case without horizontal overflow 1`] = `
"XioCode v1.6.0 · anthropic/claude-3-7-sonnet · think:off
● 超长的一行文本用于测试窄屏下终端文本截断和折行表现是否符合
预期，绝对不能导致外部边框变形或组件错位。
















────────────────────────────────────────────────────────────
 ❯   Ask a question, / for commands, or paste code…
────────────────────────────────────────────────────────────

? for shortcuts · /short/path"
`;

exports[`TUI Visual Regression Baseline [T00] > renders 80x24 standard terminal with Chinese long text and emoji stably 1`] = `
"XioCode v1.6.0 · anthropic/claude-3-7-sonnet · think:off
● 在本次架构演进中，我们通过 ExecutionDomain 严格隔离执行域资源 🚀。
即使在多进程并发争抢场景下，事务持久化与意图注册机制也能确保不会产生悬挂进程与脏
数据。
所有关键调用链路均提供显式类型保障与状态机收敛。














────────────────────────────────────────────────────────────────────────────────
 ❯   Ask a question, / for commands, or paste code…
────────────────────────────────────────────────────────────────────────────────

? for shortcuts · /srv/work/xiocode"
`;

exports[`TUI Visual Regression Baseline [T00] > renders 80x24 standard terminal with GFM table format 1`] = `
"XioCode v1.6.0 · anthropic/claude-3-7-sonnet · think:off
● | 模块   | 状态   | 覆盖率 |
| ------ | ------ | ------ |
| kernel | 正常   | 98.5%  |
| tui    | 校验中 | 95.2%  |














────────────────────────────────────────────────────────────────────────────────
 ❯   Ask a question, / for commands, or paste code…
────────────────────────────────────────────────────────────────────────────────

? for shortcuts · /srv/work/xiocode"
`;

exports[`TUI Visual Regression Baseline [T00] > renders 120x40 wide terminal with restored session history 1`] = `
"XioCode v1.6.0 · anthropic/claude-3-7-sonnet · think:off
❯ 查看当前的 Git 状态与改动统计
● 已检查工作区状态，当前共有 17 个文件变更，主要集中在 runtime 与 sandbox 扩展层。
































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯   Ask a question, / for commands, or paste code…
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

? for shortcuts · /srv/work/xiocode · turn 1"
`;

exports[`TUI Visual Regression Baseline [T00] > renders multi-tool execution with success and warning notices in 80x24 1`] = `
"█   █  ███   ▄██▄          ▄▄
 ▀▄▀    █   █▀  ▀█       ▄███  XioCode v1.6.0
 ▄▀▄    █   █▄  ▄█    ▄▄█████  anthropic/claude-3-7-sonnet · think:off
█   █  ███   ▀██▀   ▀▀▀██████

  @          mention a file so the agent reads it first
  ?          all shortcuts
  /rollback  undo the files the agent changed

· 发现 2 处待处理的架构契约冲突，建议立即检查









────────────────────────────────────────────────────────────────────────────────
 ❯   Ask a question, / for commands, or paste code…
────────────────────────────────────────────────────────────────────────────────

? for shortcuts · /srv/work/xiocode · ctx:38% | $0.042"
`;

exports[`TUI Visual Regression Baseline [T00] — 中文界面 > renders an 80x24 approval in Chinese 1`] = `
"█   █  ███   ▄██▄          ▄▄
 ▀▄▀    █   █▀  ▀█       ▄███  XioCode v1.6.0
 ▄▀▄    █   █▄  ▄█    ▄▄█████  anthropic/claude-3-7-sonnet · 思考：关
█   █  ███   ▀██▀   ▀▀▀██████

  @          引用文件，让智能体先读它
  ?          查看全部快捷键
  /rollback  撤销智能体改过的文件

运行这条 shell 命令？
┌──────────────────────────────────────────────────────────────────────────────┐
│rm -rf build                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
  仅本次允许  只对这一次调用
› 拒绝
  拒绝并告诉模型原因
↑↓ 选择 · enter 确认 · y 仅本次允许 · n / esc 拒绝


────────────────────────────────────────────────────────────────────────────────
 ❯   提问、输入 / 打开命令，或粘贴代码…
────────────────────────────────────────────────────────────────────────────────

? 查看快捷键 · /srv/work/xiocode"
`;

exports[`TUI Visual Regression Baseline [T00] — 中文界面 > renders the 80x24 welcome screen in Chinese 1`] = `
"█   █  ███   ▄██▄          ▄▄
 ▀▄▀    █   █▀  ▀█       ▄███  XioCode v1.6.0
 ▄▀▄    █   █▄  ▄█    ▄▄█████  anthropic/claude-3-7-sonnet · 思考：关
█   █  ███   ▀██▀   ▀▀▀██████

  @          引用文件，让智能体先读它
  ?          查看全部快捷键
  /rollback  撤销智能体改过的文件

· 项目信任：已信任 /srv/work/xiocode









────────────────────────────────────────────────────────────────────────────────
 ❯   提问、输入 / 打开命令，或粘贴代码…
────────────────────────────────────────────────────────────────────────────────

? 查看快捷键 · /srv/work/xiocode"
`;
